@@ -1,3 +1,9 @@
+2001-12-13  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/borders.c (RedrawTitle):
+	* libs/defaults.h (WINDOW_TITLE_OFFSET):
+	fixed 'stick' lines with long titles
+
 2001-11-28  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/placement.c (PlaceWindow):
